# zabtem

./: .gitignore  Cargo.toml  LICENSE  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  goal.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/main/: index.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.test.tsx  App.tsx  api.ts  global.css  main.tsx  styles.css
apps/server/: Cargo.toml
apps/server/src/: lib.rs  main.rs  mib.rs  snmp.rs  template.rs
docs/plans/: 2026-05-30-zabbix-template-generator-design-notes.md  2026-05-30-zabbix-template-generator-plan.md
docs/progress/: project-progress-report.md
docs/superpowers/plans/: 2026-05-30-desktop-skeleton.md  2026-05-31-project-and-snmp-profile-foundation.md  2026-06-01-desktop-interface-redesign.md  2026-06-16-fast-mvp-hardening.md  2026-06-16-snmp-template-pipeline.md
docs/superpowers/specs/: 2026-05-30-desktop-skeleton-supervision-design.md  2026-06-01-desktop-interface-redesign-design.md  2026-06-15-frontend-workbench-design.md
fixtures/expected/: sample-template.yaml
fixtures/mib/: README.md  test-switch-minimal.mib
fixtures/snmpwalk/: h3c-sample.walk  huawei-sample.walk  ruijie-sample.walk
scripts/: build-skeleton.ts  generate-template.ts  validate-template.ts
tools/windows-snmpwalk/: README.txt  run_snmpwalk.cmd
(+29 files in other folders)
