[package]
name = "zabtem-server"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.0"
