[package]
name = "zabtem-tauri"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "zabtem_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
zabtem-server = { path = "../../server" }
